Added basic smartbasic snippets

--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
             "language": "smartbasic",
             "scopeName": "source.smartbasic",
             "path": "./syntaxes/smartbasic.tmLanguage.json"
-        }]
+        }],
+        "snippets": [
+            {
+                "language": "smartbasic",
+                "path": "./snippets/snippets.json"
+            }
+        ]
     }
 }
