--- a/language-configuration.json
+++ b/language-configuration.json
@@ -17,7 +17,6 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"]
     ],
     // symbols that can be used to surround a selection
     "surroundingPairs": [
@@ -25,6 +24,11 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"]
-    ]
+    ],
+    "folding": {
+		"markers": {
+			"start": "^\\s*(function|sub|select|for|if|while)\\b",
+			"end": "^\\s*(endfunc|endsub|endselect|next|endif|endwhile)\\b"
+		}
+	}
 }
